# formo

./: .buildinfo  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  export.html  genindex.html  geometry.html  index.html  install.html  io.html  names-and-colors.html  objects.inv  operations.html  patterns.html  primer.html  search.html  searchindex.js  shapes.html  units.html
.github/: release.yml
.github/workflows/: build.yml  gh-pages.yml  qa.yml  release.yml
_sources/: export.rst.txt  geometry.rst.txt  index.rst.txt  install.rst.txt  io.rst.txt  names-and-colors.rst.txt  operations.rst.txt  units.rst.txt
_sources/tutorials/: 2d-geometry.rst.txt  bottle.rst.txt
cmake/: CodeCoverage.cmake  formo-config.cmake.in  formoConfig.cmake.in
docs/: CMakeLists.txt  Doxyfile.in  conf.py.in  geometry.rst  install.rst  io.rst  operations.rst  patterns.rst  primer.rst  shapes.rst
include/: config.h.in
include/formo/: arc_of_circle.h  axis1.h  axis2.h  box.h  circle.h  circular_pattern.h  circumscribed_polygon.h  color.h  color_map.h  cone.h  cylinder.h  direction.h  document_file.h  edge.h  env.h  exception.h  face.h  geometry.h  helix.h  hexagonal_pattern.h  iges_file.h  inscribed_polygon.h  io.h  line.h  linear_pattern.h  operations.h  pattern.h  plane.h  point.h  polygon.h  prism.h  shape.h  shell.h  solid.h  sphere.h  spline.h  step_file.h  utils.h  vector.h  wire.h
python/: CMakeLists.txt  pyproject.toml.in  setup.py.in
python/src/: CMakeLists.txt  formo.cpp
python/src/formo/: __init__.py
python/tests/: test_direction.py  test_helix.py  test_operations.py  test_point.py  test_vector.py  test_wire.py
src/: arc_of_circle.cpp  axis1.cpp  axis2.cpp  box.cpp  circle.cpp  circular_pattern.cpp  circumscribed_polygon.cpp  color.cpp  color_map.cpp  cone.cpp  cylinder.cpp  direction.cpp  document_file.cpp  edge.cpp  env.cpp  exception.cpp  face.cpp  geometry.cpp  helix.cpp  hexagonal_pattern.cpp  iges_file.cpp  inscribed_polygon.cpp  io.cpp  line.cpp  linear_pattern.cpp  operations.cpp  pattern.cpp  plane.cpp  point.cpp  polygon.cpp  prism.cpp  shape.cpp  shell.cpp  solid.cpp  sphere.cpp  spline.cpp  step_file.cpp  utils.cpp  vector.cpp  wire.cpp
test/: CMakeLists.txt
test/assets/: box.iges  box.step
test/src/: ArcOfCircle_test.cpp  Axis1_test.cpp  Axis2_test.cpp  Box_test.cpp  Circle_test.cpp  CircularPattern_test.cpp  CircumscribedPolygon_test.cpp  Color_test.cpp  Cone_test.cpp  Cylinder_test.cpp  Direction_test.cpp  ExceptionTestMacros.h  Exception_test.cpp  Face_test.cpp  Geometry_test.cpp  Helix_test.cpp  HexagonalPattern_test.cpp  IGESFile_test.cpp  IO_test.cpp  InscribedPolygon_test.cpp  Line_test.cpp  LinearPattern_test.cpp  Operations_test.cpp  Plane_test.cpp  Point_test.cpp  Polygon_test.cpp  Prism_test.cpp  STEPFile_test.cpp  Shape_test.cpp  Sphere_test.cpp  Spline_test.cpp  Utils_test.cpp  Vector_test.cpp  Wire_test.cpp
tutorials/: 2d-geometry.html  bottle.html
tutorials/2d-geometry/: channel.py
tutorials/bottle/: bottle.py
